<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">WeatherLogger</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="userName">UserName</string>
    <string name="noOfPosts">Number of Posts:</string>
    <string name="defaultCount">0</string>
    <string name="checkin">CheckIn</string>
    <string name="voice_checkin">Voice CheckIn</string>
</resources>
